--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       }(window.location))
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-    <title>Hi There!</title>
+    <title>Shane Timmerman's Personal Site</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
